2.2.2/_sources/gallery/scales/symlog_demo.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_scales_symlog_demo.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scales_symlog_demo.py:


===========
Symlog Demo
===========

Example use of symlog (symmetric log) axis scaling.




.. image:: /gallery/scales/images/sphx_glr_symlog_demo_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np

    dt = 0.01
    x = np.arange(-50.0, 50.0, dt)
    y = np.arange(0, 100.0, dt)

    plt.subplot(311)
    plt.plot(x, y)
    plt.xscale('symlog')
    plt.ylabel('symlogx')
    plt.grid(True)
    plt.gca().xaxis.grid(True, which='minor')  # minor grid on too

    plt.subplot(312)
    plt.plot(y, x)
    plt.yscale('symlog')
    plt.ylabel('symlogy')

    plt.subplot(313)
    plt.plot(x, np.sin(x / 3.0))
    plt.xscale('symlog')
    plt.yscale('symlog', linthreshy=0.015)
    plt.grid(True)
    plt.ylabel('symlog both')

    plt.tight_layout()
    plt.show()


.. _sphx_glr_download_gallery_scales_symlog_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: symlog_demo.py <symlog_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: symlog_demo.ipynb <symlog_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
